@@ -1,7 +1,7 @@
 Begin3
 Title:          KAppTemplate
-Version:        1.0
-Entered-date:   04Feb01
+Version:        1.0.4
+Entered-date:   15Feb01
 Description:    Modular shell script that will automatically create a
                 framework for either a normal KDE 2.x application, a
                 KPart application, a KPart plugin, or convert an
@@ -11,8 +11,8 @@ Author:         Kurt Granroth <granroth@kde.org>
 Maintained-by:  Kurt Granroth <granroth@kde.org>
 Home-page:      http://www.granroth.org/kapptemplate
 Primary-site:   cvs.kde.org:/home/kde/kdesdk/kapptemplate
-                xxxxxx  kapptemplate-1.0.tar.bz2
-                xxx     kapptemplate-1.0.lsm
+                xxxxxx  kapptemplate-1.0.4.tar.bz2
+                xxx     kapptemplate-1.0.4.lsm
 Platform:       Unix
 Copying-policy: GPL
 End
