@@ -1,3 +1,12 @@
+Feb-15-2000 - Kurt Granroth (v1.0.4)
+  o Create a "real" factory for the KPart plugins instead of using a
+    generic one
+  o Use 'find' instead of 'ls' for listing files.  Works better on
+    FreeBSD.  Thanks to Jonathan Belson <jon@witchspace.com> for the
+    heads up.
+  o Fixed command line args and module selection code.  Thanks to
+    David Jarvie <djarvie@lineone.net> for the fix.
+
 Feb-04-2000 - Kurt Granroth (v1.0.3)
   o Converted App::load method to use KURL instead of QString in kapp
     module
